--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=springboot-blog-rest-api
+spring.datasource.url:jdbc:mysql://localhost:3306/myblog
+spring.datasource.username=root
+spring.datasource.password=mysql123#
+
+spring.jpa.hibernate.ddl-auto=update
+
